--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
@@ -169,12 +170,22 @@
 					<showDeprecation>true</showDeprecation>
 				</configuration>
 			</plugin>
+			<!-- <plugin> -->
+			<!-- <groupId>org.codehaus.mojo</groupId> -->
+			<!-- <artifactId>exec-maven-plugin</artifactId> -->
+			<!-- <version>1.2.1</version> -->
+			<!-- <configuration> -->
+			<!-- <mainClass>org.test.int1.Main</mainClass> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2.1</version>
+				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>org.test.int1.Main</mainClass>
+					<url>http://localhost:8080/manager</url>
+					<username>tomcat</username>
+					<password>123456</password>
+					<path>/</path>
 				</configuration>
 			</plugin>
 		</plugins>
